# whatsapp-bot

./: .gitignore  ARCHITECTURE.md  CHANGELOG.json  DEPLOY.md  README.md  VERSIONS.md  ecosystem.config.js  package-lock.json  package.json  readme.md
mcp/: mediaops-restricted.mcp.json  mediaops.mcp.json  pyproject.toml
mcp/src/mediaops/: config.py  inventory.py  server.py
mcp/src/mediaops/services/: analytics.py  arr_media.py  bazarr.py  diagnostics.py  health.py  jellyseerr.py  mediamanager.py  memory.py  process.py  prowlarr.py  qbittorrent.py
scripts/: smoke-test.sh  test-whatsapp.md
src/: announcer.js  bot.js  db.js  errors.js  handler.js  history.js  inflight.js  moderation.js  notifications.js  optimizer.js  ratelimit.js  requestOrigins.js  scheduler.js  usermemory.js  users.js  webhooks.js
src/commands/: buscar.js  claudechat.js  descargas.js  stackhealth.js  vincular.js
src/services/: claudeApi.js  jellyseerr.js  qbittorrent.js  stackhealth.js
