[project]
name = "mediaops"
version = "0.1.0"
description = "MCP server exposing high-level MediaOps tools for the arr stack"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27",
]

[project.scripts]
mediaops = "mediaops.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mediaops"]
